Update and rename login.php to login.html

--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
             <p>Inventory Management System</p>
         </div>
         <div class="loginBody">
-            <form action="login.php" method="POST">
+            <form action="login.html" method="POST">
                 <div class="loginInputsContainer">
                     <label for="">Username</label>
                     <input type="text" placeholder="username" name="username" type="text" />
@@ -62,7 +62,7 @@
                     <input type="password" placeholder="password" name="password" type="password" />
                 </div>
                 <div>
-                    <button>Login</button> <button><a href="../ims/index.php">Back</a></button>
+                    <button>Login</button> <button><a href="../ims/index.html">Back</a></button>
                 </div>
             </form>
         </div>
