--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="header">
             <div class="homepageContainer">
-                <a href="../ims/login.php">Login</a>
+                <a href="../eandj-pharmacy/login.html">Login</a>
             </div>
         </div>
         <div class="banner">
