--- a/dashboard.html
+++ b/dashboard.html
@@ -19,9 +19,9 @@
     </head>
     <body>
         <div id="dashboardMainContainer" id="dashboardMainContainer">
-            <?php include('partials/app-sidebar.php') ?>
+            <?php include('partials/app-sidebar.html') ?>
             <div class="dashboard_content_container" id="dashboard_content_container">
-                <?php include('partials/app-topnav.php') ?>
+                <?php include('partials/app-topnav.html') ?>
                 <div class="dashboard_content">
                     <div class="dashboard_content_main" id="dashboard_content_main">
                     </div>
