--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
             <p>Inventory Management System</p>
         </div>
         <div class="loginBody">
-            <form action="../eandj-pharmacy/dashboard.html" method="POST">
+            <form action="<!--../eandj-pharmacy/dashboard.html-->" method="POST">
                 <div class="loginInputsContainer">
                     <label for="">Username</label>
                     <input type="text" placeholder="username" name="username" type="text" />
@@ -62,7 +62,7 @@
                     <input type="password" placeholder="password" name="password" type="password" />
                 </div>
                 <div>
-                    <button>Login</button> <button><a href="../eandj-pharmacy/index.html">Back</a></button>
+                    <a href="https://jiffgals.github.io/eandj-pharmacy/dashboard.html"><button>Login</button></a> <button><a href="../eandj-pharmacy/index.html">Back</a></button>
                 </div>
             </form>
         </div>
