--- a/dashboard.html
+++ b/dashboard.html
@@ -72,7 +72,12 @@
         </div>
 </div>
             <div class="dashboard_content_container" id="dashboard_content_container">
-                <?php include('partials/app-topnav.html') ?>
+               <!-- <?php include('partials/app-topnav.html') ?> -->
+                <div class="dashboard_topNav" id="dashboard_topNav">
+                    <a href="" id="toggleBtn"><i class="fa fa-navicon"></i></a>
+                    <a href="../eandj-pharmacy/logout.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
+                </div>
+                
                 <div class="dashboard_content">
                     <div class="dashboard_content_main" id="dashboard_content_main">
                     </div>
