--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,9 @@
     </head>
     <body>
         <div id="dashboardMainContainer" id="dashboardMainContainer">
-
+<!-- <?php
+    $user = $_SESSION['$user']
+?> -->
 <div class="dashboard_sidebar" id="dashboard_sidebar">
     <h3 class="dashboard_logo" id="dashboard_logo">Admin</h3>
         <div class="dashboard_sidebar_user">
