--- a/users-view.html
+++ b/users-view.html
@@ -7,20 +7,20 @@
 
     
     $_SESSION['table'] = 'users';
-    $users = include('database/show-users.php');
+    $users = include('database/show-users.html');
 ?>
 
 <DOCTYPE html>
     <html>
     <head>
         <title>View Users - Admin Control Panel</title>
-        <?php include('partials/app-header-scripts.php') ?>
+        <?php include('partials/app-header-scripts.html') ?>
     </head>
     <body>
         <div id="dashboardMainContainer" id="dashboardMainContainer">
-            <?php include('partials/app-sidebar.php') ?>
+            <?php include('partials/app-sidebar.html') ?>
             <div class="dashboard_content_container" id="dashboard_content_container">
-                <?php include('partials/app-topnav.php') ?>
+                <?php include('partials/app-topnav.html') ?>
                 <div class="dashboard_content">
                     <div class="dashboard_content_main" id="dashboard_content_main">
                         <div class="row">
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-<?php include('partials/app-scripts.php') ?>
+<?php include('partials/app-scripts.html') ?>
 
     </body>
     </html>
