--- a/users-view.html
+++ b/users-view.html
@@ -14,7 +14,12 @@
     <html>
     <head>
         <title>View Users - Admin Control Panel</title>
-        <?php include('partials/app-header-scripts.html') ?>
+        <!-- <?php include('partials/app-header-scripts.html') ?> -->
+        <link rel="stylesheet" type="text/css" href="css/login.css?v=<?= time(); ?>">
+        <!-- <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css"> -->
+        <script src="https://use.fontawesome.com/0c7a3095b5.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.35.4/css/bootstrap-dialog.min.css" integrity="sha512-PvZCtvQ6xGBLWHcXnyHD67NTP+a+bNrToMsIdX/NUqhw+npjLDhlMZ/PhSHZN4s9NdmuumcxKHQqbHlGVqc8ow==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        
     </head>
     <body>
         <div id="dashboardMainContainer" id="dashboardMainContainer">
