--- a/users-view.html
+++ b/users-view.html
@@ -38,7 +38,7 @@
             <ul class="dashboard_menu_lists">
                 <!--  class="menuActive" -->
                 <li class="liMainMenu">
-                    <a href="./dashboard.html"><i class="fa fa-dashboard"></i> <span class="menuText">Dashboard</span></a>
+                    <a href="https://github.io/eandj-pharmacy/dashboard.html"><i class="fa fa-dashboard"></i> <span class="menuText">Dashboard</span></a>
                 </li>
                 <li class="liMainMenu">
                     <a href="javascript:void(0);" class="showHideSubMenu">
@@ -48,8 +48,8 @@
                     </a>
 
                     <ul class="subMenus">
-                        <li><a class="subMenuLink" href="./product-view.html"> <i class="fa fa-circle-o"></i> View Product</a></li>
-                        <li><a class="subMenuLink" href="./product-add.html"> <i class="fa fa-circle-o"></i> Add Product</a></li>
+                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacy/product-view.html"> <i class="fa fa-circle-o"></i> View Product</a></li>
+                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacy/product-add.html"> <i class="fa fa-circle-o"></i> Add Product</a></li>
                     </ul>
                 </li>
                 <li class="liMainMenu">
@@ -72,8 +72,8 @@
                     </a>
 
                     <ul class="subMenus">
-                        <li><a class="subMenuLink" href="./users-view.html"> <i class="fa fa-circle-o"></i> View Users</a></li>
-                        <li><a class="subMenuLink" href="./users-add.html"> <i class="fa fa-circle-o"></i> Add User</a></li>
+                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacyusers-view.html"> <i class="fa fa-circle-o"></i> View Users</a></li>
+                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacy/users-add.html"> <i class="fa fa-circle-o"></i> Add User</a></li>
                     </ul>
                 </li>
             </ul>
@@ -81,7 +81,12 @@
 </div>
             
             <div class="dashboard_content_container" id="dashboard_content_container">
-                <?php include('partials/app-topnav.html') ?>
+                <!-- <?php include('partials/app-topnav.html') ?> -->
+                <div class="dashboard_topNav" id="dashboard_topNav">
+                    <a href="" id="toggleBtn"><i class="fa fa-navicon"></i></a>
+                    <a href="https://github.io/eandj-pharmacy/logout.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
+                </div>
+                
                 <div class="dashboard_content">
                     <div class="dashboard_content_main" id="dashboard_content_main">
                         <div class="row">
@@ -128,7 +133,7 @@
             </div>
         </div>
 
-<?php include('partials/app-scripts.html') ?>
+<?php include('https://github.io/eandj-pharmacy/partials/app-scripts.html') ?>
 
     </body>
     </html>
