--- a/users-view.html
+++ b/users-view.html
@@ -7,7 +7,15 @@
 
     
     $_SESSION['table'] = 'users';
-    $users = include('database/show-users.html');
+    // $users = include('database/show-users.html');
+    include('connection.php');
+
+    $stmt = $conn->prepare("SELECT * FROM users ORDER BY created_at DESC");
+    $stmt->execute();
+    $stmt->setFetchMode(PDO::FETCH_ASSOC);
+
+    return $stmt->fetchAll();
+
 ?>
 
 <DOCTYPE html>
