--- a/users-view.html
+++ b/users-view.html
@@ -8,13 +8,26 @@
     
     $_SESSION['table'] = 'users';
     // $users = include('database/show-users.html');
-    include('connection.php');
+    /* include('connection.php');
+    $servername = 'localhost';
+    $username = 'root';
+    $password = '';
+    
+    // connecting to database. connection.php will be attached in login.php page at the top.
+    try {
+        $conn = new PDO("mysql:host=$servername;dbname=inventory", $username, $password);
+        // set the PDO error mode to exception.
+        $conn->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
+    } catch (\Exception $e) {
+        $error_message = $e->getMessage();
+    }
 
     $stmt = $conn->prepare("SELECT * FROM users ORDER BY created_at DESC");
     $stmt->execute();
     $stmt->setFetchMode(PDO::FETCH_ASSOC);
 
     return $stmt->fetchAll();
+    */
 
 ?>
 
