--- a/users-view.html
+++ b/users-view.html
@@ -8,7 +8,7 @@
     
     $_SESSION['table'] = 'users';
     // $users = include('database/show-users.html');
-    /* include('connection.php');
+    include('connection.php');
     $servername = 'localhost';
     $username = 'root';
     $password = '';
@@ -27,7 +27,6 @@
     $stmt->setFetchMode(PDO::FETCH_ASSOC);
 
     return $stmt->fetchAll();
-    */
 
 ?>
 
