--- a/users-add.html
+++ b/users-add.html
@@ -48,7 +48,7 @@
             <ul class="dashboard_menu_lists">
                 <!--  class="menuActive" -->
                 <li class="liMainMenu">
-                    <a href="./dashboard.html"><i class="fa fa-dashboard"></i> <span class="menuText">Dashboard</span></a>
+                    <a href="https://jiffgals.github.io/eandj-pharmacy/dashboard.html"><i class="fa fa-dashboard"></i> <span class="menuText">Dashboard</span></a>
                 </li>
                 <li class="liMainMenu">
                     <a href="javascript:void(0);" class="showHideSubMenu">
@@ -58,8 +58,8 @@
                     </a>
 
                     <ul class="subMenus">
-                        <li><a class="subMenuLink" href="./product-view.html"> <i class="fa fa-circle-o"></i> View Product</a></li>
-                        <li><a class="subMenuLink" href="./product-add.html"> <i class="fa fa-circle-o"></i> Add Product</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/product-view.html"> <i class="fa fa-circle-o"></i> View Product</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/product-add.html"> <i class="fa fa-circle-o"></i> Add Product</a></li>
                     </ul>
                 </li>
                 <li class="liMainMenu">
@@ -82,8 +82,8 @@
                     </a>
 
                     <ul class="subMenus">
-                        <li><a class="subMenuLink" href="./users-view.html"> <i class="fa fa-circle-o"></i> View Users</a></li>
-                        <li><a class="subMenuLink" href="./users-add.html"> <i class="fa fa-circle-o"></i> Add User</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/users-view.html"> <i class="fa fa-circle-o"></i> View Users</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/users-add.html"> <i class="fa fa-circle-o"></i> Add User</a></li>
                     </ul>
                 </li>
             </ul>
@@ -94,7 +94,7 @@
                 <!-- <?php include('partials/app-topnav.php') ?> -->
                 <div class="dashboard_topNav" id="dashboard_topNav">
                     <a href="" id="toggleBtn"><i class="fa fa-navicon"></i></a>
-                    <a href="../eandj-pharmacy/logout.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
+                    <a href="https://jiffgals.github.io/eandj-pharmacy/logout.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
                 </div>
                 
                 <div class="dashboard_content">
@@ -103,7 +103,7 @@
                             <div class="column column-12">
                                 <h1 class="section_header"><i class="fa fa-plus"></i> Create User</h1>
                                     <div class="userAddFormContainer">
-                                        <form action="database/add.php" method="POST" class="appForm">
+                                        <form action="https://jiffgals.github.io/eandj-pharmacy/database/add.php" method="POST" class="appForm">
                                             <div class="appFormInputContainer">
                                                 <label for="first_name">First Name</label>
                                                 <input type="text" class="appFormInput" id="first_name" name="first_name" />
