--- a/users-view.html
+++ b/users-view.html
@@ -34,7 +34,7 @@
     <html>
     <head>
         <title>View Users - Admin Control Panel</title>
-        <!-- <?php include('partials/app-header-scripts.html') ?> -->
+        <!-- <?php include('https://jiffgals.github.io/eandj-pharmacy/partials/app-header-scripts.html') ?> -->
         <link rel="stylesheet" type="text/css" href="css/login.css?v=<?= time(); ?>">
         <!-- <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css"> -->
         <script src="https://use.fontawesome.com/0c7a3095b5.js"></script>
@@ -58,7 +58,7 @@
             <ul class="dashboard_menu_lists">
                 <!--  class="menuActive" -->
                 <li class="liMainMenu">
-                    <a href="https://github.io/eandj-pharmacy/dashboard.html"><i class="fa fa-dashboard"></i> <span class="menuText">Dashboard</span></a>
+                    <a href="https://jiffgals.github.io/eandj-pharmacy/dashboard.html"><i class="fa fa-dashboard"></i> <span class="menuText">Dashboard</span></a>
                 </li>
                 <li class="liMainMenu">
                     <a href="javascript:void(0);" class="showHideSubMenu">
@@ -68,8 +68,8 @@
                     </a>
 
                     <ul class="subMenus">
-                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacy/product-view.html"> <i class="fa fa-circle-o"></i> View Product</a></li>
-                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacy/product-add.html"> <i class="fa fa-circle-o"></i> Add Product</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/product-view.html"> <i class="fa fa-circle-o"></i> View Product</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/product-add.html"> <i class="fa fa-circle-o"></i> Add Product</a></li>
                     </ul>
                 </li>
                 <li class="liMainMenu">
@@ -92,8 +92,8 @@
                     </a>
 
                     <ul class="subMenus">
-                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacy/users-view.html"> <i class="fa fa-circle-o"></i> View Users</a></li>
-                        <li><a class="subMenuLink" href="https://github.io/eandj-pharmacy/users-add.html"> <i class="fa fa-circle-o"></i> Add User</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/users-view.html"> <i class="fa fa-circle-o"></i> View Users</a></li>
+                        <li><a class="subMenuLink" href="https://jiffgals.github.io/eandj-pharmacy/users-add.html"> <i class="fa fa-circle-o"></i> Add User</a></li>
                     </ul>
                 </li>
             </ul>
@@ -104,7 +104,7 @@
                 <!-- <?php include('partials/app-topnav.html') ?> -->
                 <div class="dashboard_topNav" id="dashboard_topNav">
                     <a href="" id="toggleBtn"><i class="fa fa-navicon"></i></a>
-                    <a href="https://github.io/eandj-pharmacy/logout.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
+                    <a href="https://jiffgals.github.io/eandj-pharmacy/logout.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
                 </div>
                 
                 <div class="dashboard_content">
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-<!-- <?php include('https://github.io/eandj-pharmacy/partials/app-scripts.html') ?> -->
+<!-- <?php include('https://jiffgals.github.io/eandj-pharmacy/partials/app-scripts.html') ?> -->
 <script src="js/script.js"></script>
 <script src="js/jquery/jquery-3.7.1.min.js"></script>
 <!-- Latest compiled and minified CSS -->
