--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
             <p>Inventory Management System</p>
         </div>
         <div class="loginBody">
-            <form action="<!--../eandj-pharmacy/dashboard.html-->" method="POST">
+            <form action="" method="POST">
                 <div class="loginInputsContainer">
                     <label for="">Username</label>
                     <input type="text" placeholder="username" name="username" type="text" />
