--- a/database/show-users.html
+++ b/database/show-users.html
@@ -1,6 +1,6 @@
 <?php
 
-include('connection.php');
+include('https://jiffgals.github.io/eandj-pharmacy/database/connection.php');
 
 $stmt = $conn->prepare("SELECT * FROM users ORDER BY created_at DESC");
 $stmt->execute();
