--- a/logout.html
+++ b/logout.html
@@ -1,6 +1,6 @@
 <?php
     session_start();
-    if(!isset($_SESSION['user'])) header('location: login.html');
+    if(!isset($_SESSION['user'])) header('location: https://jiffgals.github.io/eandj-pharmacy/login.html');
 
     // remove all sessions variables
     session_unset();
