Update and rename add.php to add.html

--- a/database/add.html
+++ b/database/add.html
@@ -2,7 +2,7 @@
     // Start the session.
     session_start();
     // Capture the table mappings.
-    include('table_columns.php');
+    include('https://jiffgals.github.io/eandj-pharmacy/database/table_columns.php');
 
     // Capture table name.
     $table_name = $_SESSION['table'];
