--- a/users-add.html
+++ b/users-add.html
@@ -103,7 +103,7 @@
                             <div class="column column-12">
                                 <h1 class="section_header"><i class="fa fa-plus"></i> Create User</h1>
                                     <div class="userAddFormContainer">
-                                        <form action="https://jiffgals.github.io/eandj-pharmacy/database/add.php" method="POST" class="appForm">
+                                        <form action="" method="POST" class="appForm">
                                             <div class="appFormInputContainer">
                                                 <label for="first_name">First Name</label>
                                                 <input type="text" class="appFormInput" id="first_name" name="first_name" />
@@ -120,7 +120,7 @@
                                                 <label for="password">Password</label>
                                                 <input type="password" class="appFormInput" id="password" name="password" />
                                             </div>
-                                            <button type="submit" class="appBtn"><i class="fa fa-plus"></i> Add User</button>
+                                            <button type="submit" class="appBtn"><i class="fa fa-plus"></i> <a href="https://jiffgals.github.io/eandj-pharmacy/database/add.php">Add User</a></button>
                                         </form>
                                         <?php
                                             if(isset($_SESSION['response'])){
