--- a/users-add.html
+++ b/users-add.html
@@ -94,7 +94,7 @@
                 <!-- <?php include('partials/app-topnav.php') ?> -->
                 <div class="dashboard_topNav" id="dashboard_topNav">
                     <a href="" id="toggleBtn"><i class="fa fa-navicon"></i></a>
-                    <a href="https://jiffgals.github.io/eandj-pharmacy/logout.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
+                    <a href="https://jiffgals.github.io/eandj-pharmacy/login.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
                 </div>
                 
                 <div class="dashboard_content">
