--- a/users-add.html
+++ b/users-add.html
@@ -120,7 +120,7 @@
                                                 <label for="password">Password</label>
                                                 <input type="password" class="appFormInput" id="password" name="password" />
                                             </div>
-                                            <button type="submit" class="appBtn"><i class="fa fa-plus"></i> <a href="https://jiffgals.github.io/eandj-pharmacy/database/add.php">Add User</a></button>
+                                            <button type="submit" class="appBtn"><i class="fa fa-plus"></i> <a href="https://jiffgals.github.io/eandj-pharmacy/database/add.html">Add User</a></button>
                                         </form>
                                         <?php
                                             if(isset($_SESSION['response'])){
