--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                     <input type="password" placeholder="password" name="password" type="password" />
                 </div>
                 <div>
-                    <button><a href="https://jiffgals.github.io/eandj-pharmacy/dashboard.html">Login</a></button> <button><a href="https://jiffgals.github.io/eandj-pharmacy/eandj-pharmacy/index.html">Back</a></button>
+                    <button><a href="https://jiffgals.github.io/eandj-pharmacy/dashboard.html">Login</a></button> <button><a href="https://jiffgals.github.io/eandj-pharmacy/index.html">Back</a></button>
                 </div>
             </form>
         </div>
