--- a/dashboard.html
+++ b/dashboard.html
@@ -77,7 +77,7 @@
                <!-- <?php include('partials/app-topnav.html') ?> -->
                 <div class="dashboard_topNav" id="dashboard_topNav">
                     <a href="" id="toggleBtn"><i class="fa fa-navicon"></i></a>
-                    <a href="https://jiffgals.github.io/eandj-pharmacy/eandj-pharmacy/login.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
+                    <a href="https://jiffgals.github.io/eandj-pharmacy/login.html" id="logoutBtn"><i class="fa fa-power-off"></i> Log-out</a>
                 </div>
                 
                 <div class="dashboard_content">
