--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
                     <input type="password" placeholder="password" name="password" type="password" />
                 </div>
                 <div>
-                    <a href="https://jiffgals.github.io/eandj-pharmacy/dashboard.html"><button>Login</button></a> <a href="https://jiffgals.github.io/eandj-pharmacy/index.html"><button>Back</button></a>
+                    <button href="https://jiffgals.github.io/eandj-pharmacy/dashboard.html">Login</button> <button href="https://jiffgals.github.io/eandj-pharmacy/index.html">Back</butto
                 </div>
             </form>
         </div>
